--- a/M1U3/style.css
+++ b/M1U3/style.css
@@ -1,19 +1,24 @@
 p{
     color:darkgreen;
     font-family: Arial, Helvetica, sans-serif;
+    FontAwesomeIcon icon="fa-solid fa-camera-movie" /;
 }
 h2{
     color:maroon;
     text-decoration: underline;
+    font-family: 'Dancing Script', cursive;
+   
 }
 
 img[alt] {
    border-radius: 50%;
    border-style:double;
    border-color: darkred;
+   box-shadow: 0 0 25px #999;
  }
 
  div {
       background-color:indianred;
    
  }
+
