--- a/M2U2/Ejercicio2.css
+++ b/M2U2/Ejercicio2.css
@@ -17,13 +17,25 @@
 
 #caja1{
     background-color: red;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	color: white;
 	
 }
 #caja2{
     background-color: blue;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	color: white;
 	
 }
 #caja3{
     background-color: green;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	color: white;
 	
 }
