--- a/M2U2/Ejercicio3.css
+++ b/M2U2/Ejercicio3.css
@@ -15,10 +15,22 @@
 
 #caja1{
     background-color: red;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	color: white;
 }
 #caja2{
     background-color: blue;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	color: white;
 }
 #caja3{
     background-color: green;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	color: white;
 }
