--- a/M3U1_Proyecto/css/styles.css
+++ b/M3U1_Proyecto/css/styles.css
@@ -11468,7 +11468,7 @@ header.masthead .masthead-heading {
 }
 #portfolio .portfolio-item .portfolio-caption {
   padding: 1.5rem;
-  text-align: center;
+  text-align:left;
   background-color: #fff;
 }
 #portfolio .portfolio-item .portfolio-caption .portfolio-caption-heading {
