Cambios en el diseño

--- a/M6U2/back/views/admin/layout.hbs
+++ b/M6U2/back/views/admin/layout.hbs
@@ -12,7 +12,15 @@
 <body>
     {{{body}}}   
 </body>
-<footer>
-</footer>
+  <footer id="footer">
+                <div className="container">
+                    <div className="copyright">
+                        &copy; Copyright <strong><span>Patricia Mastori</span></strong>. Todos los derechos reservados
+                    </div>
+                    <div className="credits">
+                        Diseñado por <a href="#">Patricia Mastori</a>
+                    </div>
+                </div>
+            </footer>
 
 </html>
